# _basic_projects

./: README.md  update.sh
OpenGL/: readme.md
OpenGL/Drawing/: CMakeLists.txt  main.cpp
game_programming/: CMakeLists.txt  Dockerfile  configure.txt  generate.sh  main.cpp  readme.md  run.sh  save.txt
game_programming/CSProxy/: CSProxy.h  ConnectedService.h  ConnectedServiceAdaptor.h  ConnectedServiceInf.hpp  ConnectedServiceInf.xml  ConnectedServiceProxy.cpp
game_programming/proxy_design/: ConnectedServiceAdaptor.cpp  ConnectedServiceProxy.h
game_programming/template/: first_program.cpp
game_programming/updateProxy/13_CS_App/: .gitignore  13_CS_App.pro  csengine.cpp  csengine.h  main.cpp  systemifapps.xml
game_programming/updateProxy/13_CS_App/Common/: cscommon.cpp  cscommon.h  util.h
game_programming/updateProxy/13_CS_App/Models/: CSModel.cpp  CSModel.h  ConnectedProvider.cpp  ConnectedProvider.h  ConnectedProviderPretty.cpp
game_programming/updateProxy/UICommon/: HMIHeaderService.h  HMIHeaderServiceAdaptor.cpp  HMIHeaderServiceAdaptor.h  HMIHeaderServiceProxy.cpp  HMIHeaderServiceProxy.h  ImagePoolProvider.cpp  ImagePoolProvider.h  LanguageManagement.cpp  LanguageManagement.h  SmartPhoneAgency.h  SmartPhoneAgency.xml  SmartPhoneAgencyAdaptor.cpp  SmartPhoneAgencyAdaptor.h  SmartPhoneAgencyProxy.cpp  SmartPhoneAgencyProxy.h  UICommon.cpp  UICommon.h  UICommon.pro  UICommon.qrc  UICommon_global.h  UIKeyboard.h  UILogger.cpp  UILogger.h  UIScreenContext.cpp  UIScreenContext.h  UISetting.cpp  UISetting.h  WrapPro.h  hmiheaderif.xml  hmisysif.xml
(+293 files in other folders)
